test/tests/errors/error-function-env.sm
// true
// false
// false
/**/
/**/

program {
    func a(b: int): int {
        b + x
    }
    const x: int = 1;
    output a(1);
}